--- a/client/recipes/Recipes.html
+++ b/client/recipes/Recipes.html
@@ -1,13 +1,16 @@
 <template name="Recipes">
-	{{> NewRecipe}}
-		<section class="recipes">
-	{{#if Template.subscriptionsReady}}
-		{{#each recipes}}
-			{{> Recipe}}
-		{{/each}}
-	{{else}}
-	<p>Loading...</p>
-		{{/if}}
-		</section>
-
+    {{>
+    NewRecipe}}
+    <section class="recipes">
+        {{#if Template.subscriptionsReady}}
+        {{#each recipes}}
+        {{>
+        Recipe}}
+        {{/each}}
+        {{else}}
+        <p>
+            Loading...
+        </p>
+        {{/if}}
+    </section>
 </template>
