--- a/client/recipes/Recipes.html
+++ b/client/recipes/Recipes.html
@@ -1,11 +1,13 @@
 <template name="Recipes">
-    {{>
-    NewRecipe}}
+{{#if $.Session.get 'newRecipe'}}
+	{{> NewRecipe}}
+{{else}}
+	<button class="new-recipe">New Recipe</button>
+{{/if}}
     <section class="recipes">
         {{#if Template.subscriptionsReady}}
         {{#each recipes}}
-        {{>
-        Recipe}}
+        {{> Recipe}}
         {{/each}}
         {{else}}
         <p>
